services/event-bingo/overlays/prod/backend-pool-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bingo-backend
spec:
  template:
    spec:
      containers:
        - name: event-bingo-backend
