services/event-bingo/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-bingo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bingo.pseudolab-devfactory.com
      secretName: event-bingo-tls
  rules:
    - host: bingo.pseudolab-devfactory.com
      http:
        paths:
          - path: /api(/|$).*
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-bingo-backend
                port:
                  number: 8000
          - path: /event/[^/]+/?$
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-bingo-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-bingo-frontend
                port:
                  number: 80
